--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory = inventory
-remote_user = centos
+remote_user = coder
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
